--- a/src/css/components/_Nav.scss
+++ b/src/css/components/_Nav.scss
@@ -1,21 +1,25 @@
-@use '../variables/colors' as *;
-@use '../variables/typography' as *;
+@use '../variables' as *;
 
-nav{
-    ul{
-        align-items: center;
-        display: flex;
-        justify-content: space-around;
-        list-style: none;
-    }
-    a{
-        color: $text-color;
-        text-decoration: none;
-        transition: color 0.25s ease-in-out;
+nav {
+	padding: 10px;
 
-        &:hover, &:focus{
-            color: $action-color;
-        }
+	img {
+		width: 100px;
+	}
+	ul {
+		align-items: center;
+		display: flex;
+		justify-content: space-around;
+		list-style: none;
+	}
+	a {
+		color: $text-color;
+		text-decoration: none;
+		transition: color 0.25s ease-in-out;
 
-    }
+		&:hover,
+		&:focus {
+			color: $action-color;
+		}
+	}
 }
