--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -19,14 +19,20 @@ body{
     font-size: $font-size;
     text-align: center;
     background-color: $primary-color;
+    margin-top: 100px;
 }
 
 header{
     background-color: $accent-color;
+    opacity: 0.8;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
 }
 
 section{
-    margin: 40px 0;
+    padding: 40px 0;
 }
 
 #about p{
