--- a/src/css/variables/_typography.scss
+++ b/src/css/variables/_typography.scss
@@ -1,2 +1,4 @@
-$font-family: Georgia, 'Times New Roman', Times, serif;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
+
+$font-family: 'Roboto', sans-serif;
 $font-size: 1.5em;
