--- a/src/css/components/_Carousel.scss
+++ b/src/css/components/_Carousel.scss
@@ -2,17 +2,46 @@
 @use '../variables' as *;
 
 .carousel {
-    max-width: 800px;
-    aspect-ratio: 8/7;
-    width: 90%;
-    position: relative;
-    margin: auto;
+	justify-content: center;
+	align-items: center;
+	display: flex;
+
+	button {
+		background: none;
+		border: none;
+		display: block;
+		background-color: black;
+        opacity: 0.7;
+		padding: 60px 10px;
+        margin: 5px;
+	}
+	.arrow {
+		border-top: 50px solid transparent;
+		border-bottom: 50px solid transparent;
+		height: 0;
+		width: 0;
+
+		&.left {
+			border-right: 50px solid white;
+		}
+        &.right{border-left: 50px solid white;}
+	}
+
+	&__container {
+		aspect-ratio: 8/7;
+		max-width: 800px;
+		position: relative;
+		width: 90%;
+
+		// border: 1px solid white;
+	}
+
 	img {
-        position: absolute;
+		position: absolute;
 		max-width: 100%;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        transition: opacity 0.5s ease-in-out;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		transition: opacity 0.5s linear;
 	}
 }
