--- a/src/css/variables/_colors.scss
+++ b/src/css/variables/_colors.scss
@@ -1,7 +1,7 @@
 // Color Palate
-$primary-color: #000;
-$accent-color: #333;
-$action-color: #666;
+$primary-color: #052705;
+$accent-color: #0d4108;
+$action-color: #895B1E;
 
 // Text Colors
 $text-color: #AAA;
